fix those from my absent
- Change login from username to email
- Centered things you left behind
- Make registering works
- Really tho, can we just make this NOT responsive?
- it called regsuc lmao, like suc ma

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ p#recommendedTitle{
 
 /* login.html styling */
 
-#mainLoginDiv{
+.mainLoginDiv{
     background-color: white;
     width: 70%;
     height: 70%;
@@ -116,7 +116,20 @@ p#recommendedTitle{
     
 }
 
-#usernameInput, #passwordInput {
+#mainRegDiv{
+    background-color: white;
+    width: 70%;
+    height: 80%;
+    margin: auto;
+    position: absolute;
+    top: 58%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    
+}
+
+#emailInput, #passwordInput {
     width: 100%;
     margin: 1% 1% 1% 0%;
 }
